# Honors

./: .gitignore  CMakeLists.txt  README.md  convert.m  read.m
convertedMats/: 1.txt  10.txt  100.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+60 more)
dFactors/: mat-10-0.001000.txt  mat-10-0.002000.txt  mat-10-0.003000.txt  mat-10-0.004000.txt  mat-10-0.005000.txt  mat-10-0.006000.txt  mat-10-0.007000.txt  mat-10-0.009000.txt  mat-10-0.010000.txt  mat-100-0.001000.txt  mat-100-0.002000.txt  mat-100-0.003000.txt  mat-100-0.004000.txt  mat-100-0.005000.txt  mat-100-0.006000.txt  mat-100-0.008000.txt  mat-100-0.009000.txt  mat-100-0.010000.txt  mat-20-0.001000.txt  mat-20-0.002000.txt  mat-20-0.003000.txt  mat-20-0.004000.txt  mat-20-0.005000.txt  mat-20-0.006000.txt  mat-20-0.008000.txt  mat-20-0.009000.txt  mat-20-0.010000.txt  mat-50-0.001000.txt  mat-50-0.002000.txt  mat-50-0.003000.txt  mat-50-0.004000.txt  mat-50-0.005000.txt  mat-50-0.006000.txt  mat-50-0.007000.txt  mat-50-0.009000.txt  mat-50-0.010000.txt
include/: CSCMatrix.hpp  CSCOperations.hpp  DenseMatrix.hpp  EliminationTree.hpp  Incomplete.hpp  Name.hpp  SPDTester.hpp  Symbolic.hpp  TripletMatrix.hpp  vars.hpp
lFactors/: mat-10-0.001000.txt  mat-10-0.002000.txt  mat-10-0.003000.txt  mat-10-0.004000.txt  mat-10-0.005000.txt  mat-10-0.006000.txt  mat-10-0.007000.txt  (+29 more)
(+1 files in other folders)
